--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "build": "tsc",
+    "start": "nodemon src/server.ts",
+    "start:prod": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,11 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.2",
+    "@types/serve-index": "^1.9.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
